--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
-  "name": "zx",
+  "name": "@cspotcode/zx",
   "version": "5.0.0",
   "description": "A tool for writing better scripts.",
-  "main": "./index.mjs",
-  "exports": {
-    ".": "./index.mjs",
-    "./globals": "./globals.mjs"
-  },
+  "main": "index.js",
   "types": "index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./import.mjs",
+      "require": "./index.js"
+    },
+    "./globals": {
+      "import": "./globals.mjs",
+      "require": "./globals-require.js"
+    }
+  },
   "bin": {
     "zx": "zx.mjs"
   },
@@ -15,6 +21,7 @@
     "node": ">= 16.0.0"
   },
   "scripts": {
+    "build": "swc -o index.js index.mjs",
     "test": "node zx.mjs test.mjs"
   },
   "dependencies": {
@@ -31,14 +38,17 @@
     "which": "^2.0.2",
     "yaml": "^1.10.2"
   },
-  "publishConfig": {
-    "registry": "https://wombat-dressing-room.appspot.com"
+  "devDependencies": {
+    "@swc/cli": "^0.1.49",
+    "@swc/core": "^1.2.80"
   },
   "files": [
     "*.mjs",
+    "!index.mjs",
+    "*.js",
     "*.d.ts"
   ],
-  "repository": "google/zx",
+  "repository": "cspotcode/zx",
   "author": "Anton Medvedev <anton@medv.io>",
   "license": "Apache-2.0"
 }
