--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
       "import": "./import.mjs",
       "require": "./index.js"
     },
-    "./globals": {
-      "import": "./globals.mjs",
-      "require": "./globals-require.js"
-    }
+    "./globals": "./globals.js"
   },
   "bin": {
     "zx": "zx.mjs"
