--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "node": ">= 16.0.0"
   },
   "scripts": {
-    "build": "esbuild --bundle --platform=node --sourcemap --outfile=src/index.js src/index.mjs && esbuild --bundle --platform=node --sourcemap --external:./index.js --outfile=src/experimental.js src/experimental.mjs && api-extractor run",
+    "build": "esbuild --bundle --platform=node --sourcemap --outfile=src/index.js src/index.mjs && esbuild --bundle --platform=node --sourcemap --external:./index.js --outfile=src/experimental.js src/experimental.mjs",
+    "NOTE: api-extractor is not used anymore, keeping here to make it easier to reintroduce in the future, if ever": "",
+    "api-extractor": "api-extractor run",
     "test": "node zx.mjs test/full.test.mjs",
     "test:cov": "c8 --reporter=html npm run test",
     "test:zx": "npm run test zx",
@@ -32,19 +34,19 @@
     "@types/minimist": "^1.2.2",
     "@types/node": "^17.0",
     "@types/which": "^2.0.1",
-    "globby": "^13.1.1"
+    "chalk": "^5.0.1",
+    "globby": "^13.1.1",
+    "node-fetch": "^3.2.3",
+    "yaml": "^2.0.1"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.19.4",
     "c8": "^7.11.2",
-    "chalk": "^5.0.1",
     "esbuild": "^0.14.21",
     "fs-extra": "^10.1.0",
     "minimist": "^1.2.6",
-    "node-fetch": "^3.2.3",
     "ps-tree": "^1.2.0",
-    "which": "^2.0.2",
-    "yaml": "^2.0.1"
+    "which": "^2.0.2"
   },
   "files": [
     "src",
